# Progect-on-flask

./: Dockerfile  Readme.md  docker-compose.yml  ignore.py  main.py  pyproject.toml  requarements.txt  requirements.txt
app/: __init__.py  deps.py  main.py  models.py  views.py  views_all.py
app/adapter/: __init__.py  database.py  history.py  in_database.py  in_memory.py  interface.py
app/adapter/database/: __init__.py  in_database.py  tables.py
app/adapter/memory/: __init__.py  in_memory.py
app/dto/: __init__.py  expression_create.py  expression_solve.py  expressions.py  leaderboard_create.py  question_create.py  question_solve.py  questions.py  user_create.py  users.py
app/exceptions/: __init__.py  expresion_exceptions.py  history_exceptions.py  question_exceptions.py
app/models/: __init__.py  expressions.py  questions.py  users.py
app/services/: __init__.py  answer_checker.py  create_expression.py  create_leaderboard.py  create_question.py  create_user.py  expression_in_history.py  expression_servise.py  question_in_history.py  question_servise.py  user_servise.py
app/tests/: __init__.py
app/tests/test_expression/: test_expression_create.py
app/tests/test_question/: test_question_create.py
app/tests/test_user/: __init__.py  test_get_user.py  test_user_create.py  test_user_history.py
app/views/: __init__.py  expressions.py  questions.py  users.py  views_all.py
