[project]
name = "progect-on-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "faker==37.6.0",
    "flask==3.1.1",
    "fonttools==4.59.2",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "mypy==1.17.1",
    "mypy-extensions==1.1.0",
    "numpy==2.3.2",
    "packaging==25.0",
    "pathspec==0.12.1",
    "phonenumbers==9.0.12",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "six==1.17.0",
    "sqlalchemy>=2.0.43",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.8.14",
    "werkzeug==3.1.3",
]
